@@ -20,7 +20,8 @@ along with the GNU MP Library; see the file COPYING.LIB.  If not, write to
 the Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
 MA 02111-1307, USA. */
 
-#include <gmp.h>
+#include "gmp.h"
+#include "gmp-impl.h"
 
 void
 #if __STDC__
